--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,6 +15,7 @@
   <script src="src/Game.js"></script>
   <script src="src/Frame.js"></script>
   <script src="src/Roll.js"></script>
+  <script src="src/Bowl.js"></script>
   <script src="src/ScoreUpdater.js"></script>
 
   <!-- include spec files here... -->
@@ -23,7 +24,7 @@
   <script src="spec/FrameSpec.js"></script>
   <script src="spec/RollSpec.js"></script>
   <script src="spec/ScoreUpdaterSpec.js"></script>
-
+  <script src="spec/BowlSpec.js"></script>
 </head>
 
 <body>
