--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -17,6 +17,7 @@
   <script src="src/Roll.js"></script>
   <script src="src/Bowl.js"></script>
   <script src="src/ScoreUpdater.js"></script>
+  <script src="src/FinalFrame.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
@@ -25,6 +26,7 @@
   <script src="spec/RollSpec.js"></script>
   <script src="spec/ScoreUpdaterSpec.js"></script>
   <script src="spec/BowlSpec.js"></script>
+  <script src="spec/FinalFrameSpec.js"></script>
 </head>
 
 <body>
